# VirtForge

./: .dockerignore  .gitignore  Cargo.toml  README.md
agent/: Cargo.toml
agent/deploy/: vps-agent.service
agent/src/: config.rs  heartbeat.rs  main.rs  redaction.rs  resources.rs  security.rs
agent/src/client/: mod.rs
agent/src/libvirt/: mod.rs
agent/src/network/: mod.rs
agent/src/tasks/: mod.rs
deploy/: .env.example  docker-compose.agent-artifact.yml  docker-compose.mtls.yml  docker-compose.yml
deploy/caddy/: Caddyfile  Caddyfile.mtls.example
docs/: DESIGN.md  INSTALL.md  SECURITY.md
frontend/: Dockerfile  eslint.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: README.md  app-providers.tsx  control-panel.tsx
frontend/lib/: admin-session.ts  api.ts  audit-detail.ts  host-checks.ts  i18n.ts  master-fetch-failure.ts  master-path.ts  master-timeout.ts  master-url.ts  node-readiness.ts  request-security.ts  response-cache.ts  route-params.ts  task-actions.ts  vm-actions.ts
frontend/tests/: admin-session.test.mjs  audit-detail.test.mjs  host-checks.test.mjs  i18n.test.mjs  install-command-state.test.mjs  master-fetch-failure.test.mjs  master-path.test.mjs  master-timeout.test.mjs  master-url.test.mjs  node-readiness.test.mjs  panel-action-error-usage.test.mjs  panel-confirmation-usage.test.mjs  request-security.test.mjs  response-cache.test.mjs  route-params.test.mjs  tanstack-query-usage.test.mjs  tanstack-table-usage.test.mjs  task-actions.test.mjs  (+3 more)
master/: Cargo.toml  Dockerfile
master/migrations/: 0001_master_mvp.sql  0002_vm_inventory.sql  0003_agent_request_nonces.sql  0004_ip_pools.sql  0005_audit_request_id.sql  0006_images.sql  0007_node_resource_metrics.sql  0008_plans.sql  0009_vm_ssh_public_key.sql  0010_node_host_checks.sql  0011_task_error_message.sql  0012_node_scheduling.sql  0013_node_capacity_view.sql
master/src/: config.rs  main.rs  rate_limit.rs  redaction.rs
master/src/audit/: mod.rs
master/src/auth/: mod.rs
master/src/http/: mod.rs
master/src/images/: mod.rs
master/src/ipam/: mod.rs
master/src/nodes/: mod.rs
master/src/plans/: mod.rs
master/src/tasks/: mod.rs
master/src/vms/: mod.rs
scripts/: build-agent-binary.ps1  build-agent-binary.sh  build-docker-images.ps1  install-agent.sh  kvm-host-smoke.sh  security-scan.sh  smoke-master-agent.ps1  test-build-script-validation.sh  test-deploy-config-validation.sh  test-docs-validation.sh  test-install-agent-validation.sh  test-kvm-host-smoke-validation.sh  test-security-scan-wrapper.sh  test-smoke-master-agent-validation.ps1
shared/: Cargo.toml
shared/src/: api.rs  ids.rs  lib.rs  plans.rs  security.rs  signing.rs  tasks.rs  vms.rs
(+23 files in other folders)
