[workspace]
members = ["agent", "master", "shared"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "UNLICENSED"
repository = "private"
rust-version = "1.88"

[workspace.dependencies]
anyhow = "1.0"
argon2 = "0.5"
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
hmac = "0.12"
libc = "0.2"
rand_core = { version = "0.6", features = ["getrandom"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
roxmltree = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["chrono", "json", "macros", "migrate", "postgres", "runtime-tokio-rustls", "uuid"] }
thiserror = "1.0"
tokio = { version = "1.40", features = ["macros", "process", "rt-multi-thread", "signal", "time"] }
toml = "0.8"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.10", features = ["serde", "v4"] }
